# rust-wasm-node-test

./: Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
benchmarks/: fibonacci.js  js-fibonacci.js
example/: example.js
src/: lib.rs
