[package]
name = "fun-with-wasm"
version = "0.1.0"
authors = ["Max Nachlinger <maxNOSPAM.nachlingerNOSPAM@gmail.com>"]
edition = "2018"
publish = false
license = "UNLICENSED"

[lib]
crate-type=["cdylib"]

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
