[package]
name = "fun-with-wasm"
version = "0.1.0"
authors = ["Max Nachlinger <maxNOSPAM.nachlingerNOSPAM@gmail.com>"]
edition = "2018"
publish = false
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[package.metadata.wasm-pack.profile.release]
# Optimize aggressively for speed.
wasm-opt = ["-O3"]

[profile.release]
opt-level = 'z'
lto = true
